--- a/password_generator/pg_app/templates/pg_app/home.html
+++ b/password_generator/pg_app/templates/pg_app/home.html
@@ -34,4 +34,4 @@
 </form>
 
 </div>
-<a class="btn btn-success " href="{% url 'about' %}">About Page</a> 
+<a class="btn btn-warning" href="{% url 'about' %}">About Page</a> 
